--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.13
   slugify: ^2.0.0
   url_launcher: ^6.0.10
+  top_snackbar_flutter: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
