--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.13.1
-  firebase_storage: ^10.2.9
+  firebase_core: ^2.9.0
+  firebase_storage: ^11.1.0
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
-  flutter_lints: ^1.0.0
-  flutter_svg: ^0.22.0
+  flutter_lints: ^2.0.1
+  flutter_svg: ^2.0.5
   http: ^0.13.4
   image_picker: ^0.8.4+11
-  intl: ^0.17.0
+  intl: ^0.18.0
   shared_preferences: ^2.0.13
   slugify: ^2.0.0
   url_launcher: ^6.0.10
-  top_snackbar_flutter: ^1.0.2
+  top_snackbar_flutter: ^3.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
